--- a/src/components/Dishes/Dishes.css
+++ b/src/components/Dishes/Dishes.css
@@ -16,7 +16,9 @@
     margin: 0 34% 0 0;
 
 }
-.Dishes-Title button {
+.Dishes-Title > a {
+    color: black;
+    text-decoration: none;
     font-weight: bold;
     background-color: white;
     border: 2px solid black;
@@ -35,6 +37,10 @@
     color: white;
     margin: 0 20px;
     text-decoration: none;
+    background-color: transparent;
+    border:none;
+    font-size: 15px;
+    cursor: pointer;
 }
 .link:hover {
     text-decoration: underline;
